# variKN

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL.md  README.md  acknowledgements.txt  commands.html  docker_notes.md  index.html  install  licence.txt  params.json  possible_optimizations.txt  pyproject.toml  readme  setup.py
.github/workflows/: tests.yaml  wheels.yaml
app/: CMakeLists.txt  add_zeroprob_grams.cc  arpa2arpa.cc  arpa2bin.cc  arpasize.cc  bin2arpa.cc  check_model.cc  counts2kn.cc  perplexity.cc  simpleinterpolate2arpa.cc  varigram_kn.cc
cmake/: clang-cxx-dev-tools.cmake
python-wrapper/: CMakeLists.txt  Perplexity.i  VariKN.i
python-wrapper/tests/: CMakeLists.txt  UnitTests.py
python-wrapper/varikn/: __init__.py
src/: ArpaReader.cc  ArpaReader.hh  Endian.cc  Endian.hh  GramSorter.cc  GramSorter.hh  HashGram.hh  HashGram_tmpl.hh  InterKn.hh  InterKn_tmpl.hh  InterTreeGram.cc  InterTreeGram.hh  MultiOrderCounts.hh  MultiOrderCounts_tmpl.hh  NGram.hh  NgramCounts.hh  NgramCounts_tmpl.hh  PerplexityFuncs.cc  PerplexityFuncs.hh  QFit.cc  QFit.hh  Storage.hh  Storage_tmpl.hh  TreeGram.cc  TreeGram.hh  TreeGramArpaReader.cc  TreeGramArpaReader.hh  VarigramFuncs.hh  VarigramFuncs_tmpl.hh  Vocabulary.cc  Vocabulary.hh  conf.cc  conf.hh  def.hh  io.cc  io.hh  matrix_common.h  sikMatrix.hh  sparse_matrix.c  sparse_matrix.h  (+3 more)
stored_away/: Makefile  Makefile-swig  find_ngram_counts.cc  hashgramtest.cc  merge_ngram_counts.cc  moc_writetest.cc  prune.cc  qfit_test.cc  take_n_most_common_words.cc
tests/: CMakeLists.txt  UnitTests.cpp  generate_data.sh
